# atomit

./: .gitignore  AUTHORS  CMakeLists.txt  NEWS  README.md  TODO.md
Applications/: AtomITRestApi.cpp  AtomITRestApi.h  FilterFactory.cpp  FilterFactory.h  MainTimeSeriesFactory.cpp  MainTimeSeriesFactory.h  ServerContext.cpp  ServerContext.h  main.cpp
Documentation/: Compilation.md  Concepts.md  Configuration.md  Filters.md  Lua.md  QuickStart.md  RestApi.md  SampleIMST.md  SampleProximusMyThings.md  SampleSigfox.md  SampleTheThingsNetwork.md  Samples.md
Framework/: AtomITEnumerations.h  AtomITToolbox.cpp  AtomITToolbox.h  ConfigurationSection.cpp  ConfigurationSection.h  FileWritersPool.cpp  FileWritersPool.h  Message.cpp  Message.h
Framework/Filters/: AdapterFilter.cpp  AdapterFilter.h  CSVFileSinkFilter.cpp  CSVFileSinkFilter.h  CSVFileSourceFilter.cpp  CSVFileSourceFilter.h  CounterSourceFilter.cpp  CounterSourceFilter.h  DemultiplexerFilter.cpp  DemultiplexerFilter.h  FileLinesSourceFilter.cpp  FileLinesSourceFilter.h  FileReaderFilter.cpp  FileReaderFilter.h  HttpPostSinkFilter.cpp  HttpPostSinkFilter.h  IFilter.h  IMSTSourceFilter.cpp  IMSTSourceFilter.h  LoRaPacketFilter.cpp  LoRaPacketFilter.h  LuaFilter.cpp  LuaFilter.h  MQTTSinkFilter.cpp  MQTTSinkFilter.h  MQTTSourceFilter.cpp  MQTTSourceFilter.h  SharedFileSinkFilter.cpp  SharedFileSinkFilter.h  SourceFilter.cpp  SourceFilter.h
Framework/LoRa/: FrameEncryptionKey.cpp  FrameEncryptionKey.h  LoRaEnumerations.cpp  LoRaEnumerations.h  LoRaToolbox.cpp  LoRaToolbox.h  MACPayload.cpp  MACPayload.h  PHYPayload.cpp  PHYPayload.h  UnsignedInteger128.cpp  UnsignedInteger128.h
Framework/MQTT/: Broker.cpp  Broker.h  MQTTClientWrapper.cpp  MQTTClientWrapper.h  SynchronousClient.cpp  SynchronousClient.h
Framework/TimeSeries/: GenericTimeSeriesManager.cpp  GenericTimeSeriesManager.h  ITimeSeriesAccessor.h  ITimeSeriesBackend.h  ITimeSeriesFactory.h  ITimeSeriesManager.h  ITimeSeriesObserver.h  TimeSeriesReader.cpp  TimeSeriesReader.h  TimeSeriesWriter.cpp  TimeSeriesWriter.h
Framework/TimeSeries/MemoryBackend/: MemoryTimeSeriesBackend.cpp  MemoryTimeSeriesBackend.h  MemoryTimeSeriesContent.cpp  MemoryTimeSeriesContent.h
Framework/TimeSeries/SQLiteBackend/: PrepareDatabase.sql  SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteTimeSeriesBackend.cpp  SQLiteTimeSeriesBackend.h  SQLiteTimeSeriesTransaction.cpp  SQLiteTimeSeriesTransaction.h
Resources/: AtomIT.doxygen  SyncOrthancFolder.py
Resources/CMake/: IMSTGateway.cmake  Orthanc-1.3.1.patch  OrthancFramework.cmake  PahoMQTT.cmake  RaspberryPiToolchain.cmake
Resources/Docker/: Dockerfile  build.sh  create-config.sh
UnitTestsSources/: LoRaTests.cpp  TimeSeriesTests.cpp  UnitTests.cpp
WebInterface/: chart.html  chart.js  content.html  content.js  explorer.html  explorer.js
